Removed overflow:hidden from circle player to prevent clipping

--- a/ad/sass/partials/_circleplayer.scss
+++ b/ad/sass/partials/_circleplayer.scss
@@ -38,9 +38,10 @@
  padding-top:1px;
  padding-bottom:1px;
  margin-bottom:-18px; /* approximate "line height" we want */
- padding-left:248px;
+ padding-left:0px;
  margin-left:0px;
  background-position:22.6% 50%; /* (~109px) initial play button position */
+ width: 140px;
 }
 
 .sm2-inline-list .ui360-vis {
@@ -52,7 +53,7 @@
  white-space:nowrap;
  text-indent:0px; /* undo inline style */
  top:230px; /* ehh. */
- margin-left: -249px;
+ margin-left: -163px;
  width: 140px;
  display: block;
  text-align: center;
@@ -65,7 +66,7 @@
 }
 
 .ui360-vis .sm2-360ui {
- margin-left:-268px;
+ margin-left:-20px;
  margin-top: -21px;
 }
 
@@ -226,7 +227,7 @@
  position:relative;
  text-decoration:none;
  left:3px; /* slight spacing on left UI */
- top:162px; /* vertical align */
+ top:157px; /* vertical align */
  text-indent:50px; /* make room for UI at left */
 }
 
